menu (2.1.13) unstable; urgency=low

  * The "unreleased" release
  * Add Ukrainian menu sections translation by Eugeniy Meshcheryakov.
    Closes: #244067.

 -- Bill Allombert <ballombe@debian.org>  Thu, 15 Apr 2004 20:39:12 +0200

menu (2.1.12) unstable; urgency=low

  * The "quickfix" release.
  * Jens Arvidsson:
    - Updated Swedish menu messages translation. 
  * Morten Brix Pedersen:
    - Fix bug where section="/" failed when translations were enabled.
      Closes: #243531.
    - Prevent infinite recursion in replace($s,$replace,$with) when $with 
      match $replace.
  * Fix typo in Chinese menu sections translation.  Closes: #242742. Thanks
    Carlos Z.F. Liu.
  * Add Turkish translations of menu messages and menu sections. 
    Closes: #243690. Thanks Cagatay Tengiz and Recai Oktas.
  * Update Catalan menu sections translation. Thanks Jordi Mallach.
  * Rename --menufiledir to --menufilesdir as documented. Update translations
    accordingly. Closes: #241289. Thanks Jean-Luc Coulon.
  * Reformat and extend the documentation about the menu entry format.

 -- Bill Allombert <ballombe@debian.org>  Thu, 15 Apr 2004 17:43:07 +0200

menu (2.1.11) unstable; urgency=low

  * The "Go bravely with Joey" release. 
  * Morten Brix Pedersen:
    - Only enable translated section names when both 'outputencoding' and
      'repeat_lang' has been set.
    - Set repeat_lang="LOCALE" per default. menu-methods now only need to set
      outputencoding in order to enable translations. 
    - Update Danish menu translation.
    - Fixed some inconsistent behaviour with "substitute section->section"
      Closes: #216851. Thanks Jean-Philippe Guérard.
    - Fix compilation with g++ 2.95.
  * su-to-root:
    + New -X for need=X11 entries that support for gksu and kdesu.
      Closes: #166844. Thanks Jason Hildebrand.
    + Handle usage by root more sanely.
    + update manpage.
  * debian/control: 
    + Suggest gksu|kdebase-bin. Install one of those if su-to-root cannot